--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "apscheduler>=3.11.0",
     "fastapi>=0.116.1",
     "fastmcp>=2.10.5",
+    "go-task-bin>=3.44.0",
     "httpx>=0.28.1",
     "mcp>=1.11.0",
     "psycopg2-binary>=2.9.10",
