--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,13 @@ wheels/
 
 # Virtual environments
 .venv
+
+# Caches
+.mypy_cache/
+.pytest_cache/
+.ruff_cache/
+
+# Logs and Databases
+*.log
+*.db
+
